--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <i class="fas fa-hashtag"></i>
                             <div>
                                 <h4>Topic</h4>
-                                <p>OpenCV-IoT6601</p>
+                                <p>role/led</p>
                             </div>
                         </div>
                         <div class="info-card">
