--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h2><i class="fas fa-sliders-h"></i> LED Control Panel</h2>
                     <div class="led-status" id="ledStatus">
                         <span class="status-indicator unknown"></span>
-                        <span>Status: Unknown</span>
+                        <span span id="durum">Status: Unknown</span>
                     </div>
                 </div>
                 
@@ -334,7 +334,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 ESP32 MQTT Control Dashboard. Built with ❤️ for IoT enthusiasts.</p>
+            <p>&copy; 2025 ESP32 MQTT Control Dashboard. Built with ❤️ for IoT enthusiasts.</p>
         </div>
     </footer>
 
